some datafixer fixes (and ASM for adding a method mixin doesn't allow)